src/scss/style.scss
/* ... */
/* INTRO */

/* SWIPER */
.swiper-pagination {
	position: static !important;
	text-align: left !important;
}

.swiper-pagination-clickable .swiper-pagination-bullet {
	width: 9px;
	height: 9px;
	background-color: $light-blue;
	opacity: 1;
	margin: 0 !important;
	margin-right: 6px !important;

	&:last-child {
		margin-right: 0 !important;
	}
}

.swiper-pagination-bullet-active {
	width: 35px !important;
	height: 9px !important;
	background-color: $blue !important;
	border-radius: 20px !important;
}
/* SWIPER */

/* OUR-DIRECTIONS */
.our-directions {
	&__title {

	}

	&__swiper {
		
	}

	&__swiper-wrapper {

	}

	&__swiper-slide {
		margin-top: 0 !important;
		margin-bottom: 40px;

		&:hover .stroke--blue {
			width: 170px;
		}
	}

	.swiper-grid-column>.swiper-wrapper {
		flex-direction: row;
	}

	&__swiper-items {
		display: flex;
		flex-wrap: wrap;
		margin: 0 -10px;
	}

	&__swiper-item {
		// width: 33.3333%;
		// padding: 0 10px;
		// margin-bottom: 40px;

		// &:hover .stroke--blue {
		// 	width: 170px;
		// }
	}

	&__item {
		&-info {
			margin-top: 15px;
			display: flex;
			// justify-content: space-between
		}

		&-left {
			margin-right: 20px;
		}

		&-right {
			display: flex;
			flex-direction: column;
			justify-content: space-between;
		}

		&-img {
			border-radius: 10px;
		}

		&-title {
			font-size: 20px;
			line-height: 1.2;
		}
		
		&-link {
			display: block;
			width: 50px;
			height: 50px;
			background-color: $green;
			border-radius: 100%;
			position: relative;

			img {
				position: absolute;
				top: 50%;
				left: 50%;
				transform: translate3d(-50%, -50%, 0)
			}
		}
	}

	&__slide-navigation {
		display: flex;
		justify-content: center;
	}
}
/* OUR-DIRECTIONS */

/* ABOUT-COMPANY */
.about-company {
	position: relative;

	&__background {
		width: 85%;
		position: absolute;
		z-index: -1;
		top: 0;
		left: 0;
		height: 373px;
		background-color: $light;
		border-radius: 0px 40px 40px 0px;
	}

	&__inner {
		display: flex;
		justify-content: space-between;
		padding-top: 50px;
	}

	&__left {
		padding-left: 94px;
		margin-right: 115px;
	}
	&__right {
	}

	&__info {
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		align-items: start;
		height: 100%;
	}

	&__titles {

	}
	
	&__img {
		border-radius: 40px;
	}

	&__title {
		margin-bottom: 10px;
	}

	&__text {
		// margin-bottom: 140px;

		p {
			line-height: 1.4;
			display: flex;
			align-items: center;
			color: $dark-grey;
			margin-bottom: 19px;

			&:last-child {
				margin-bottom: 0;
			}
		}

		img {
			display: none;
			border-radius: 40px;
		}
	}

	&__wrapper-link {

	}

	&__link {
		display: inline-block;
		padding: 17px 41px;
	}

	&__wrapper-btn {
		display: none;
	}
	
	&__btn {
		padding: 17px 10px;
	}
}
/* ABOUT-COMPANY */

/* WHY-ARE-WE */
.why-are-we {
	overflow: hidden;
	position: relative;

	&__title {

	}

	&__content {
		// display: flex;
	}

	&__items {
		display: flex;
		flex-wrap: wrap;
		margin: 0 -33px;
		margin-bottom: -71px;
	}

	&__item {
		padding: 0 33px;
		width: 50%;
		margin-bottom: 71px;
		max-width: 486px;
	}

	&-item {
		&__inner {
			padding-left: 121px;
			position: relative;
		}

		@keyframes animation-name {   
			0% {     
				background-color: rgba(121, 183, 58, 0.2);
			}   
			50% {     
				background-color: rgba(121, 183, 58, 0.4);
			} 
			100% {
				background-color: rgba(121, 183, 58, 0.2);	
			}
		  }

		&__count {
			width: 98px;
			height: 98px;
			// background-color: $green;
			background-color: rgba(121, 183, 58, 0.4);
			border-radius: 100%;
			position: absolute;
			left: 0;
			animation: animation-name 2s ease infinite;

			&:before {
				content: "";
				display: block;
				width: 74px;
				height: 74px;
				background-color: $green;
				border-radius: 100%;
				position: absolute;
				top: 50%;
				left: 50%;
				transform: translate3d(-50%, -50%, 0);
			}

			&-text {
				font-weight: 600;
				font-size: 36px;
				line-height: 140%;
				color: $white;
				position: absolute;
				top: 50%;
				left: 50%;
				transform: translate3d(-50%, -50%, 0);
			}
		}

		&__info {
		}

		&__title {
			font-size: 24px;
			line-height: 140%;
			margin-bottom: 5px;
		}

		&__text {
			font-size: 16px;
			line-height: 140%;
			color: $grey;
		}
	}

	&__big-circle {
		width: 453px;
		height: 453px;
		background-color: $light-blue;
		border-radius: 100%;
		position: absolute;
		right: 75px;
		bottom: 42px;
	}

	&__small-circle {
		width: 61px;
		height: 61px;
		background-color: $blue;
		border-radius: 100%;
		position: absolute;
		right: 50px;
		bottom: 211px;
	}

	&__background {
		position: absolute;
		z-index: -1;
		right: 84px;
		width: 632px;
		height: 495px;
		bottom: 0;

		&-item {
			position: absolute;
			bottom: 0;
			z-index: 100;
			width: 632px;
			height: 421px;
			background-image: url('@img/why-are-we/background.png');
		}
	}
}
/* ... */

